little final fixes to shadow, z-index and 50% to dropdown navbar

--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -11,6 +11,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 99999;
 }
 
 .wri-overflow-header{
@@ -27,8 +28,5 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0,0,0,0.3);
-  z-index: 9999;
-  -webkit-box-shadow: 0px -56px 0px 3px rgba(0, 0, 0, 0);
-  -moz-box-shadow: 0px -56px 0px 3px rgba(0, 0, 0, 0);
-  box-shadow: 0px -56px 0px 3px rgba(0, 0, 0, 0);
+  z-index: 9998;
 }
