--- a/app/styles/modules/header/_image-categories.scss
+++ b/app/styles/modules/header/_image-categories.scss
@@ -1,6 +1,8 @@
 #headerWrI .wri-menu-container{
   .wri-menu-categories{
-    width: 100%;
+    flex: 1;
+    min-height: 400px;
+    height: 48vh;
     ul{
       display: flex;
       flex-wrap: wrap;
@@ -15,15 +17,7 @@
       display: flex;
       width: 33.3%;
       height: 200px;
-      background-size: 100% 200px;
-      &:before{
-        position: absolute;
-        top: 0;
-        right: 0;
-      	bottom: 0;
-      	left: 0;
-      	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
-      }
+      background-size: cover;
     }
     .climate{
       background-image: url('/app/images/category1.jpg');
@@ -47,10 +41,13 @@
       display: block;
       width: 100%;
       height: 100%;
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
+      transition: background-image 0.5s linear;
       &:hover{
         background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
       h2{
         color: #fab72e;
+        transition: color 0.3s ease-in-out;
       }
      }
     }
