--- a/app/styles/modules/header/_menu.scss
+++ b/app/styles/modules/header/_menu.scss
@@ -3,6 +3,12 @@
   display: flex;
   position: relative;
   z-index: 10000;
+  align-items: stretch;
+  height: 50vh;
+  min-height: 400px;
+  -webkit-box-shadow: 0px 0px 165px 0 rgba(0, 0, 0, 3);
+  -moz-box-shadow: 0px 0px 165px 0 rgba(0, 0, 0, 3);
+  box-shadow: 0px 0px 165px 0 rgba(0, 0, 0, 3);
   .wri-nav-menu{
      .wri-nav-menu-content{
        display: flex;
@@ -16,7 +22,7 @@
        }
      }
     background-color: white;
-    width: 40%;
+    width: 33%;
     padding-top: 35px;
     display: flex;
     flex-direction: column;
