--- a/app/styles/modules/header/_topbar.scss
+++ b/app/styles/modules/header/_topbar.scss
@@ -6,7 +6,7 @@
   flex-direction: row-reverse;
   align-items: center;
   position: relative;
-  z-index: 10000;
+  z-index: 10001;
   cursor: pointer;
   svg{
     padding-right: 20px;
